Do not change organizer when adding meeting from mail
This had been reported on the mailing list:
https://lists.osuosl.org/pipermail/evolution-users/2024-February/167305.html
The EWS protocol does not allow to add meetings organized by a different user, which the "save component" checks for, but the "receive_objects" does not seem to verify the organizer matches the user, thus one can add a meeting from a meeting invitation received from a different (non-EWS) account to an EWS calendar, which can change the organizer.
It needs to be figured out whether it had been caused by this:
- receive a meeting invitation to a different mail account
- change the destination calendar to be an EWS calendar
- Accept/Tentative the meeting
Expected result:
The acceptance should fail with similar error as when adding the event, aka "Cannot create meetings organized by other users in an Exchange Web Services calendar."