I#260 - Do not change organizer when adding meeting from mail

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/260